working on workspace

--- a/app/templates/menu.tmpl
+++ b/app/templates/menu.tmpl
@@ -1,15 +1,12 @@
 {{define "menu"}}
 <div class="menu fn-clear">
   <ul id="myNavLeft">
-    <!--
-    <li>
-      <span class='glyphicon glyphicon-cog'></span>
-    </li>
-  -->
     <li id="home"  title="home" class="mainWinOnly"><span class="glyphicon glyphicon-home"></span>Home</li>
-    <!--
     <span class="split"></span>
-  -->
+    <li id="space">
+      <span class='glyphicon glyphicon-cog'></span>Workspace
+    </li>
+
     <li title="Add panel or window"id="addPanel">
       <span class="glyphicon glyphicon-plus"></span>Layout
       <div class="frame">
@@ -32,6 +29,18 @@
     <!--
     <span class="split"></span>
   -->
+  <!--
+    <li title="WorkSpace"id="addPanel">
+      <span class="glyphicon glyphicon-plus"></span>WorkSpace(Exprimental)
+      <div class="frame">
+        <ul id="renders">
+        </ul>
+        <ul>
+          <li id="loadFromSpace" title="Add panel from workspace"><span class="glyphicon glyphicon-plus-sign" title="add window"></span>Add Panel from WorkSpace... </li>
+        </ul>
+      </div>
+      </li>
+-->
       <li id="sessions"  title="Manage Sessions" class="mainWinOnly">
         <span class="glyphicon glyphicon-hdd" id="sessionUi"></span>Session
         <div class="frame" id="sessionFrame">
