--- a/app/tmpl/pub.tmpl
+++ b/app/tmpl/pub.tmpl
@@ -23,6 +23,8 @@
     body {
         font-family: Sans-Serif;
         color: #303030;
+        height: 100%;
+        overflow-y: auto;
     }
     .panel {
       width: 300px;
