same-origin to include

--- a/app/tmpl/main.tmpl
+++ b/app/tmpl/main.tmpl
@@ -29,7 +29,8 @@
   var app = {};
   var sandUser
   var sandHeaders = new Headers({})
-  var sandInits = {credentials:"same-origin"}
+  //var sandInits = {credentials:"same-origin"}
+  var sandInits = {credentials:"include"}
   var mode
   var win
   var winid
