mv web to static

--- a/app/tmpl/main.tmpl
+++ b/app/tmpl/main.tmpl
@@ -5,11 +5,11 @@
   <title id="title">{{.Appname}}</title>
   <link rel="manifest" href="/manifest.json"> <!-- For Progressive Web App -->
   {{template "lib"}}
-  <script type="text/javascript" src="/web/lib/sand.min.js"></script>
+  <script type="text/javascript" src="/static/lib/sand.min.js"></script>
   {{range .Libs}}
   <script type="text/javascript" src="{{.}}"></script>
   {{end}} {{template "css"}}
-  <link rel="stylesheet" href="/web/style/sand.base.css">
+  <link rel="stylesheet" href="/static/css/sand.base.css">
   <!-- THEME
   -->
   {{range .Styles}}
