--- a/app/tmpl/pub.tmpl
+++ b/app/tmpl/pub.tmpl
@@ -16,9 +16,9 @@
 <head>
   <title>{{template "title"}}</title>
   {{template "lib"}}
-  <script type="text/javascript" src="/web/lib/sand.min.js"></script>
+  <script type="text/javascript" src="/static/lib/sand.min.js"></script>
   {{template "css"}}
-  <link rel="stylesheet" href="/web/style/sand.base.css">
+  <link rel="stylesheet" href="/static/css/sand.base.css">
   <style>
     body {
         font-family: Sans-Serif;
