--- a/app/tmpl/home.tmpl
+++ b/app/tmpl/home.tmpl
@@ -1,4 +1,4 @@
-{{define "title"}} CNB User Home {{end}} {{define "id"}} "cnb000"{{end}} 
+{{define "title"}} NBrowser User Home {{end}} {{define "id"}} "cnb000"{{end}} 
 
 {{define "homemenu"}}
 <div class="menu fn-clear">
