--- a/app/tmpl/pub.tmpl
+++ b/app/tmpl/pub.tmpl
@@ -1,4 +1,4 @@
-{{define "title"}} CMU Nucleome Browser Entrypoints {{end}} 
+{{define "title"}} Nucleome Browser Entries {{end}} 
 {{define "pubmenu"}}
 <div class="menu fn-clear">
 <ul id="myNav" style="float:left">
