--- a/app/templates/lib.tmpl
+++ b/app/templates/lib.tmpl
@@ -15,6 +15,9 @@
 <script type="text/javascript" src="/lib/d3.v5.min.js"></script>
 <script type="text/javascript" src="/lib/dat.gui.min.js"></script>
 <script type="text/javascript" src="/lib/awesomplete.min.js"></script>
+
+<script type="text/javascript" src="/static/lib/localforage.min.js"></script>
+
 <script>
   if (window.module) module = window.module;
 </script>
