--- a/app/templates/menu.tmpl
+++ b/app/templates/menu.tmpl
@@ -4,7 +4,7 @@
     <li id="home"  title="home" class="mainWinOnly"><span class="glyphicon glyphicon-home"></span>Home</li>
     <span class="split"></span>
     <li id="space">
-      <span class='glyphicon glyphicon-cog'></span>Workspace
+      <span class='glyphicon glyphicon-cog'></span>Space
     </li>
 
     <li title="Add panel or window"id="addPanel">
@@ -26,22 +26,7 @@
   </ul>
 
   <ul id="myNavLeft2">
-    <!--
-    <span class="split"></span>
-  -->
-  <!--
-    <li title="WorkSpace"id="addPanel">
-      <span class="glyphicon glyphicon-plus"></span>WorkSpace(Exprimental)
-      <div class="frame">
-        <ul id="renders">
-        </ul>
-        <ul>
-          <li id="loadFromSpace" title="Add panel from workspace"><span class="glyphicon glyphicon-plus-sign" title="add window"></span>Add Panel from WorkSpace... </li>
-        </ul>
-      </div>
-      </li>
--->
-      <li id="sessions"  title="Manage Sessions" class="mainWinOnly">
+        <li id="sessions"  title="Manage Sessions" class="mainWinOnly">
         <span class="glyphicon glyphicon-hdd" id="sessionUi"></span>Session
         <div class="frame" id="sessionFrame">
           <ul>
