--- a/app/tmpl/main.tmpl
+++ b/app/tmpl/main.tmpl
@@ -178,7 +178,10 @@
    }
 
     window.onresize = function() {
-      dispatch.call("resize", this, {})
+        if ($("#menuContainer").css("display")=="block") {
+            $("#layoutContainer").css('width',"100%").css("width","-=200px").css("left", "200px")
+        }
+        dispatch.call("resize", this, {})
     }
     history.pushState({},"main","/v1/main.html")
   })(jQuery, d3, sand)
