--- a/app/templates/menu.tmpl
+++ b/app/templates/menu.tmpl
@@ -3,12 +3,8 @@
   <ul id="myNavLeft">
     <li id="home"  title="home" class="mainWinOnly"><span class="glyphicon glyphicon-home"></span>Home</li>
     <span class="split"></span>
-    <li id="space">
-      <span class='glyphicon glyphicon-cog'></span>Space
-    </li>
-
-    <li title="Add panel or window"id="addPanel">
-      <span class="glyphicon glyphicon-plus"></span>Layout
+      <li title="Add panel or window"id="addPanel">
+      <span class="glyphicon glyphicon-plus"></span>Panel
       <div class="frame">
         <ul id="renders">
         </ul>
@@ -21,6 +17,9 @@
         Welcome! Click me to begin!
       </div>
     -->
+    </li>
+     <li id="space" title="Panel space: a workspace to save/load panel">
+      <span class='glyphicon glyphicon-cog'></span>Space
     </li>
     <li style="display:none"  title="hide panel header"><span id="fixedToggle" class="glyphicon glyphicon-pushpin"></li>
   </ul>
@@ -39,8 +38,8 @@
             <li id="saveToSheet" title="Save session to google sheet"><span class="glyphicon glyphicon-save"></span> Save Session</li>
           </ul>
           <ul id="fileUi">
-            <li id="import" title="Load session from local disk"><span class="glyphicon glyphicon-import"></span> Load Session</li>
-            <li id="export" title="Save session to local disk"><span class="glyphicon glyphicon-export"></span> Save Session</li>
+            <li id="import" title="Load session"><span class="glyphicon glyphicon-import"></span> Load Session</li>
+            <li id="export" title="Save session"><span class="glyphicon glyphicon-export"></span> Save Session</li>
           </u1>
         </div>
       </li>
