--- a/app/tmpl/home.tmpl
+++ b/app/tmpl/home.tmpl
@@ -1,9 +1,12 @@
-{{define "title"}} NBrowser User Home {{end}} {{define "id"}} "cnb000"{{end}} 
+{{define "title"}} Home {{end}} 
+{{define "id"}} "cnb000"{{end}} 
 
 {{define "homemenu"}}
 <div class="menu fn-clear">
   <ul id="myNavLeft">
-    <li id="play" title="start application"><span class="glyphicon glyphicon-play"></span>Start Application</li>
+    <li id="home" title="user home"><span class="glyphicon glyphicon-home"></span>Home</li>
+    <span class="split"></span>
+    <li id="play" title="start application"><span class="glyphicon glyphicon-play"></span>Start</li>
     <li style="padding-right:0px" title="Login with google" id="menuUser"><span id="login" class="glyphicon glyphicon-log-in"></li>
     <li style="padding-right:0px"><image id="picture" style="height:18px;width:18px;margin:7px 4px"></image>
       <div class="frame">
@@ -36,7 +39,7 @@
   <style>
     .panel {
       width: 300px;
-      height: 570px;
+      height: 300px;
       float: left;
       margin: 10px;
     }
@@ -104,6 +107,16 @@
       0% { transform: rotate(0deg); }
       100% { transform: rotate(360deg); }
     }
+    .row {
+        padding-left:10px;
+        padding-right:10px;
+    }
+    #menuContainer ul li:hover {
+        background-color:#777
+    }
+    #menuContainer .selected {
+        background-color:#464
+    }
 
 
 
@@ -113,9 +126,12 @@
 <body>
   {{template "homemenu"}}
   <div id="wrapper" style="height:calc(100%-20px)">
-    <div id="menuContainer" style="display:none"></div>
-    <div id="layoutContainer" style="left:0%;width:100%">
-      <div class="panel panel-primary">
+    <div id="menuContainer" style="width:200px">
+    
+    </div>
+    <div id="layoutContainer" style="left:200px;width:100%">
+      <div class="row" id="firstRow">
+        <div class="panel panel-primary">
         <div class="panel-heading">
             <h3 class="panel-title">Sessions Manager</h3>
         </div>
@@ -131,10 +147,11 @@
           </form>
           <div id="loader" class="loader" style="display:none;position:absolute;left:100px">
           </div>
+          </div>
 
-        </div>
       </div>
     </div>
+</div>
 </body>
 <script>
   (function($, d3, S) {
@@ -156,12 +173,41 @@
       credentials: "same-origin"
     }
     var container = d3.select("#layoutContainer")
-    var ctrldiv = container.append("div").classed("ctrl", true)
-    var currentdiv = container.append("div").style("background-color", "#cee8d9")
-    var localPanelListDiv = container.append("div")
-    var localPanelRenderDiv = container.append("div")
-    var panelsdiv = container.append("div")
+    var menu = d3.select("#menuContainer")
+    var menuNav = menu.append("ul")
+         //var ctrldiv = container.append("div").classed("ctrl", true)
+    var currentdiv = d3.select("#firstRow").append("div").style("background-color", "#cee8d9")
+    
+    var localPanelRow = container.append("div").classed("row",true).style("display","none")
+    var localPanelListDiv = localPanelRow.append("div")
+    var localPanelRenderDiv = localPanelRow.append("div")
+    
+    var panelsdiv = container.append("div").classed("row",true).style("display","none")
+    var navs = [
+              {label:"current",el:d3.select("#firstRow")},
+              {label:"local",el:localPanelRow},
+              {label:"cloud",el:panelsdiv}
+             ]
+    //container.selectAll(".row").style("display","none")
+    
+    menuNav.selectAll("li").data(navs)
+          .enter().append("li")
+          .on("click",function(d,i){
+              menuNav.selectAll(".selected").classed("selected",false)
+              d3.select(this).classed("selected",true)
+              container.selectAll(".row").style("display","none")
+              d.el.style("display",null)
+          })
+          .text(function(d,i){
+              if(i==0){
+                  d3.select(this).classed("selected",true)
+              }
+              return d.label
+          })
+     //menuNav.selectAll("li:first-child").on("click")()
     //ctrldiv.append("span").text("SheetID:").style("padding-right","10px")
+      
+    /* Google Sheet */   
     var sheetIdInput = d3.select("#sheetIdInput")
     var currentId = ""
     var fLoad = function() {
@@ -172,16 +218,15 @@
         renderSessions()
         d3.select("#loader").style("display","none")
       }).catch(function(e){
-            //No User Sheet
+        /* TODO */  
         d3.select("#loader").style("display","none")
       })
     }
     fLoad()
     d3.select("#load")
-      .on("click", function() {
+    .on("click", function() {
         fLoad()
-      })
-
+    })
       
     d3.select("#submit")
       .on("click", function() {
@@ -221,46 +266,38 @@
           .call(pchart)
       })
     }
+
+
+    /* Local Sheet */
     var sessionDb = localforage.createInstance({
             "name": "nbSession"
         })
 
-    var localRender = S.layoutLocalForage()
+    var localRender = S.layoutLocalForage().db(sessionDb)
+    
     var itemRender = function(selection){
         selection.each(function(d){
             var el = d3.select(this)
-            el.append("span").text(d)
-            el.append("span").classed("glyphicon",true).classed("glyphicon-play",true)
-                .on("click", function(d, i) {
-                        sessionDb.getItem(d).then(function(d){
-                            localPanelRenderDiv.selectAll(".panel").remove()
-                            var p = localPanelRenderDiv.selectAll(".panel").data([d])
+            sessionDb.getItem(d).then(function(d){
+                            el.selectAll(".panel").remove()
+                            var p = el.selectAll(".panel").data([d])
                             p.exit().remove()
                             p.enter().append("div").classed("panel",true).classed("panel-default",true)
                             .merge(p)
                             .call(localRender)
-                        }) 
-                    })
-            el.append("span").classed("glyphicon",true).classed("glyphicon-remove",true)
-                .on("click", function(d, i) {
-                    sessionDb.removeItem(d).then(function(){
-                        el.remove() //TODO
-                    })
-                })
         })
+
+    })
     }
     sessionDb.keys().then(function(d) {
-                var a = localPanelListDiv.selectAll("li").data(d);
+                var a = localPanelListDiv.selectAll("div").data(d);
                 var idx = 1;
                 a.enter()
-                    .append("li")
+                    .append("div")
                     .merge(a)
                     .call(itemRender)
                 a.exit().remove()
    })
-
-
-
 
     $.get("/profile", function(d) {
       d = JSON.parse(d);
@@ -282,7 +319,7 @@
     })
 
     d3.select("#logo")
-      .attr("title", "Click to open introduction")
+      .attr("title", "Back to Login Page")
       .on("click", function() {
         window.open("/static/")
       })
@@ -300,8 +337,6 @@
     var d = localStorage.getItem(sessionId)
     if (d) {
       var d = ["Current", "Current Session", d, "/v1/main.html?config=continue"]
-      //var svg = currentdiv.append("svg").attr("height","300px").attr("width","300px")
-      //svg.datum(JSON.parse(p[-1])).call(iconRender)
       var _panels = currentdiv
         .selectAll(".panel")
         .data([d])
@@ -315,7 +350,7 @@
     }
 
     $("#play").click(function() {
-      window.location = "/v1/main.html"
+      window.location = "/v1/main.html?config=continue"
     })
   }(jQuery, d3, sand))
 </script>
