--- a/app/templates/menu.tmpl
+++ b/app/templates/menu.tmpl
@@ -1,15 +1,15 @@
 {{define "menu"}}
 <div class="menu fn-clear">
   <ul id="myNavLeft">
-    <li id="home"  title="home" class="mainWinOnly"><span class="glyphicon glyphicon-home"></span>Home</li>
+    <li id="home"  title="Home" class="mainWinOnly"><span class="glyphicon glyphicon-home"></span></li>
     <span class="split"></span>
-      <li title="Add panel or window"id="addPanel">
-      <span class="glyphicon glyphicon-plus"></span>Panel
+      <li title="Add Panel"id="addPanel">
+      <span class="glyphicon glyphicon-plus"></span>
       <div class="frame">
         <ul id="renders">
         </ul>
         <ul>
-          <li id="openExt" title="Add extend window"><span class="glyphicon glyphicon-plus-sign" title="add window"></span> Extend Window</li>
+          <li id="openExt" title="Extended Window"><span class="glyphicon glyphicon-plus-sign"></span> Extend Window</li>
         </ul>
       </div>
       <!--
@@ -18,35 +18,39 @@
       </div>
     -->
     </li>
-     <li id="space" title="Panel space: a workspace to save/load panel">
-      <span class='glyphicon glyphicon-cog'></span>Space
+     <li id="space" title="Panel Space">
+      <span class='glyphicon glyphicon-th-large'></span>
     </li>
+    
     <li style="display:none"  title="hide panel header"><span id="fixedToggle" class="glyphicon glyphicon-pushpin"></li>
   </ul>
 
   <ul id="myNavLeft2">
-        <li id="sessions"  title="Manage Sessions" class="mainWinOnly">
-        <span class="glyphicon glyphicon-hdd" id="sessionUi"></span>Session
+        <span class="split"></span>
+        <li id="sessions"  title="Session in Local" class="mainWinOnly">
+        <span class="glyphicon glyphicon-hdd" id="sessionUi"></span>
         <div class="frame" id="sessionFrame">
           <ul>
             <li id="share" title="Share session by generated URL"><span class="glyphicon glyphicon-share-alt" title="share session"></span> Share Session </li>
-            <li id="createSheetId" title="Create a google sheet id to host sessions"><span class="glyphicon glyphicon-file"></span> Create a New Session Sheet</li>
-            <li id="setSheetId" title="Set a google sheet id to host sessions"><span class="glyphicon glyphicon-cog"></span> Set Session Sheet Id</li>
-          </ul>
-          <ul id="sheetUi" style="display:none">
-            <li id="loadFromSheet" title="Load session from google sheet"><span class="glyphicon glyphicon-open"></span> Load Session</li>
-            <li id="saveToSheet" title="Save session to google sheet"><span class="glyphicon glyphicon-save"></span> Save Session</li>
           </ul>
           <ul id="fileUi">
-            <li id="import" title="Load session"><span class="glyphicon glyphicon-import"></span> Load Session</li>
-            <li id="export" title="Save session"><span class="glyphicon glyphicon-export"></span> Save Session</li>
+            <li id="import" title="Load session"><span class="glyphicon glyphicon-open"></span> Load Session</li>
+            <li id="export" title="Save session"><span class="glyphicon glyphicon-save"></span> Save Session</li>
           </u1>
         </div>
       </li>
-    <li style="padding-right:0px" title="Login with google" id="menuUser" class="mainWinOnly"><span id="login" class="glyphicon glyphicon-log-in" ></li>
-    <li style="padding-right:0px" class="mainWinOnly"><image id="picture" style="height:18px;width:18px;margin:7px 4px"></image>
+
+
+    <li style="padding-right:0px" title="Login with Google" id="menuUser" class="mainWinOnly"><span id="login" class="glyphicon glyphicon-log-in" ></li>
+    <li style="padding-right:0px" class="mainWinOnly" id="menuUser1" title="Session in Google Sheet"><image id="picture" style="height:18px;width:18px;margin:7px 4px"></image>
     <div class="frame">
       <ul>
+      <li id="setSheetId" title="Set a google sheet id to host sessions"><span class="glyphicon glyphicon-cog"></span> Set Session Sheet Id</li>
+      <li id="createSheetId" title="Create a google sheet id to host sessions"><span class="glyphicon glyphicon-file"></span> Create a New Session Sheet</li>
+      <ul id="sheetUi" style="display:none">
+      <li id="loadFromSheet" title="Load session from google sheet"><span class="glyphicon glyphicon-open"></span> Load Session</li>
+      <li id="saveToSheet" title="Save session to google sheet"><span class="glyphicon glyphicon-save"></span> Save Session</li>
+      </ul>
       <li id="logout" title="Logout"><span class="glyphicon glyphicon-log-out" title="logout"></span> Log Out</li>
       </ul>
     </div>
